--- a/ProjektProgramowanie.csproj
+++ b/ProjektProgramowanie.csproj
@@ -192,13 +192,12 @@
       <DependentUpon>CarServiceModel.edmx</DependentUpon>
       <LastGenOutput>CarServiceModel.cs</LastGenOutput>
     </Content>
+    <Resource Include="image\cs1.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="image\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
