--- a/App.config
+++ b/App.config
@@ -14,5 +14,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="CarServicesEntities" connectionString="metadata=res://*/CarServiceModel.csdl|res://*/CarServiceModel.ssdl|res://*/CarServiceModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-AO3F3SD\SQLCOURSE2020;initial catalog=Projekt;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ProjektEntities" connectionString="metadata=res://*/Projekt.csdl|res://*/Projekt.ssdl|res://*/Projekt.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-AO3F3SD\SQLCOURSE2020;initial catalog=Projekt;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
